--- a/BookStoreWeb/Views/Category/Index.cshtml
+++ b/BookStoreWeb/Views/Category/Index.cshtml
@@ -22,14 +22,25 @@
         <tr>
             <th>Category Name</th>
             <th>Display Order</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach(var obj in Model)
         {
             <tr>
-                <td style="width:50%;">@obj.Name</td>
+                <td style="width:40%;">@obj.Name</td>
                 <td style="width:30%;">@obj.DisplayOder</td>
+                <td style="width:30%;">
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-0">
+                            <i class="bi bi-pencil-square"></i> &nbsp; Edit
+                        </a>
+                        <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-0">
+                            <i class="bi bi-trash3-fill"></i> &nbsp; Delete
+                        </a>
+                    </div>
+                </td>
             </tr>
         }
     </tbody>
