--- a/BookStoreWeb/Views/Shared/_Layout.cshtml
+++ b/BookStoreWeb/Views/Shared/_Layout.cshtml
@@ -25,11 +25,12 @@
                   <li class="nav-item">
                     <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Type</a>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Management</a>
+                    <div class="dropdown-menu">
+                      <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+                      <a class="dropdown-item" asp-area="Admin" asp-controller="CoverType" asp-action="Index">Cover Type</a>
+                    </div>
                   </li>
                 </ul>
                 <form class="d-flex">
@@ -47,7 +48,7 @@
         </main>
     </div>
 
-    <footer class="footer text-muted">
+    <footer class="footer text-muted fixed-bottom py-3 border-top">
         <div class="container">
             &copy; 2022 - BookStoreWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
