added ProductViewModel to bind product view

--- a/BookStoreWeb/Views/Shared/_Layout.cshtml
+++ b/BookStoreWeb/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
         </main>
     </div>
 
-    <footer class="footer text-muted fixed-bottom py-3 border-top">
+    <footer class="footer text-muted fixed-bottom py-3 border-top bg-dark">
         <div class="container">
             &copy; 2022 - BookStoreWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
