--- a/BookStoreWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BookStoreWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -15,7 +15,7 @@
     </div>
 </div>
 
-<table class="table table-bordered table-striped" style="width:100%;">
+<table id="tblData" class="table table-bordered table-striped table-dark" style="width:100%;">
     <thead>
         <tr>
             <th>Title</th>
@@ -23,7 +23,11 @@
             <th>Price</th>
             <th>Author</th>
             <th>Category</th>
-            <th></th>
+            @*<th></th>*@
         </tr>
     </thead>
 </table>
+
+@section Scripts {
+    <script src="~/js/product.js"></script>
+}
